Fix issues with overflowing at 1024 for expertise card

--- a/src/app/css/expertise.scss
+++ b/src/app/css/expertise.scss
@@ -11,12 +11,12 @@
   @apply flex justify-start items-start space-x-4;
 }
 .cardEnv {
-  @apply flex flex-col items-center justify-start  w-full h-full overflow-x-hidden;
+  @apply flex flex-col items-center justify-start w-full h-full overflow-x-hidden;
 }
 
 
 .cardExpertise {
-  @apply z-20 overflow-visible;
+  @apply z-20;
   box-sizing: border-box ;
 
   :hover .cardTitle {
@@ -111,6 +111,10 @@
           rgba(var(--text-secondary-rgb), 0.2)); /* End with 20% opacity */
 }
 
+.navigation {
+  @apply flex justify-center items-center w-full z-50 opacity-0;
+}
+
 
 @layer components {
   @media (max-width: 640px) {
@@ -126,7 +130,7 @@
       @apply flex flex-col;
     }
     .cardExpertise {
-      @apply pl-5 pr-8 pb-8 w-full h-full;
+      @apply pl-5 pr-8 pb-8 w-full;
     }
     .technologyEnv{
       @apply mb-5
@@ -142,6 +146,12 @@
       margin-bottom: 50%;
       height: calc(100% / 1.3);
       width: calc(100% / 1.3);
+    }
+    
+  }
+  @media (min-width: 769px) {
+    .navigation{
+      opacity: 100 !important;
     }
   }
   @media (max-width: 1024px) {
