--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -198,9 +198,7 @@ body {
     }
 }
 
-.navigation {
-    @apply flex justify-center items-center w-full z-50;
-}
+
 
 .slide-enter {
     transform: translateX(100%);
